force-app/main/default/objects/NCMT_Project_P100_Data__c/NCMT_Project_P100_Data__c.object-meta.xml
<CustomObject>
    <customHelpPage>NCMT_HelpPage</customHelpPage>
    <label>NCMT Project P100 Data</label>
    <nameField>
        <displayFormat>P100-{0000}</displayFormat>
        <label>P100 Record Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>NCMT Project P100 Data</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>