force-app/main/default/objects/NCMT_Project_P100_Data__c/fields/Electrical_overall_quality_power_quality__c.field-meta.xml
<CustomField>
    <fullName>Electrical_overall_quality_power_quality__c</fullName>
    <description>Electrical - overall quality/power quality</description>
    <label>Electrical overall quality/power quality</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Baseline</fullName>
                <default>true</default>
                <label>Baseline</label>
            </value>
            <value>
                <fullName>P100: Tier 1</fullName>
            </value>
            <value>
                <fullName>P100: Tier 2</fullName>
            </value>
            <value>
                <fullName>P100: Tier 3</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>