force-app/main/default/objects/NCMT_Project_P100_Data__c/fields/Flood_Resistance__c.field-meta.xml
<CustomField>
    <fullName>Flood_Resistance__c</fullName>
    <label>Flood Resistance</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Baseline</fullName>
                <default>true</default>
                <label>Baseline</label>
            </value>
            <value>
                <fullName>P100: Tier 1</fullName>
            </value>
            <value>
                <fullName>P100: Tier 2</fullName>
            </value>
            <value>
                <fullName>P100: Tier 3</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>