force-app/main/default/objects/NCMT_Project_P100_Data__c/fields/Fossil_Fuel_65_80_90_NZC__c.field-meta.xml
<CustomField>
    <fullName>Fossil_Fuel_65_80_90_NZC__c</fullName>
    <description>Fossil Fuel: -65, -80, -90, NZC (fossil Fuel)</description>
    <label>Fossil Fuel: -65, -80, -90, NZC</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Baseline</fullName>
                <default>true</default>
                <label>Baseline</label>
            </value>
            <value>
                <fullName>P100: Tier 1</fullName>
            </value>
            <value>
                <fullName>P100: Tier 2</fullName>
            </value>
            <value>
                <fullName>P100: Tier 3</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>