force-app/main/default/objects/NCMT_Project_P100_Data__c/fields/Project__c.field-meta.xml
<CustomField>
    <fullName>Project__c</fullName>
    <label>Project</label>
    <referenceTo>NCMT_Project__c</referenceTo>
    <relationshipLabel>NCMT Project P100 Data</relationshipLabel>
    <relationshipName>NCMT_Project_P100_Data</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>