force-app/main/default/objects/NCMT_Project_P100_Data__c/fields/Site_Neighbor_Connect_Walk_Bike__c.field-meta.xml
<CustomField>
    <fullName>Site_Neighbor_Connect_Walk_Bike__c</fullName>
    <description>Site Supports Neighborhood Connectivity, Walkability, and Bikeability</description>
    <label>Site Neighbor Connect Walk Bike</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Baseline</fullName>
                <default>true</default>
                <label>Baseline</label>
            </value>
            <value>
                <fullName>P100: Tier 1</fullName>
            </value>
            <value>
                <fullName>P100: Tier 2</fullName>
            </value>
            <value>
                <fullName>P100: Tier 3</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>