force-app/main/default/objects/NCMT_Project_P100_Data__c/validationRules/One_P100_Per_Project.validationRule-meta.xml
<ValidationRule>
    <fullName>One_P100_Per_Project</fullName>
    <active>false</active>
    <description>A project cannot have more than one P100 record.</description>
    <errorConditionFormula>true</errorConditionFormula>
    <errorMessage>A Project can have only one P100 data record.</errorMessage>
</ValidationRule>